# fasttext4fun

./: CMakeLists.txt  ReadMe.md  matrix.hpp.in
corpus/: download.sh  stopwords.txt
include/: data_loader.hpp  evaluator.hpp  matrix.hpp  model.hpp  optimizer.hpp
include/cpu/: cpu_mat.hpp  mat_factory.hpp
include/optimizer/: sgd_optimizer.hpp
src/: CMakeLists.txt  acc_evaluator.cpp  data_loader.cpp  model.cpp  test.cpp  train.cpp
src/cpu/: .cpu_mat.cpp.swp  cpu_mat.cpp  mat_factory.cpp
src/optimizer/: sgd_optimizer.cpp
test/: CMakeLists.txt  test_data_loader.cpp  test_mat.cpp  test_model.cpp
tools/: data_process.py  dbpedia_data_process.py  featurefile
